--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
    </head>
    <body>
       <ul>
-         <li><img class="sb-favicon" src="http://sessionbuddy.com/images/retina/default.png"><a href="https://vbernard9.github.io/profile/" target="_blank">Discover&nbsp;Me</a></li>
+         <li><img class="sb-favicon" src="http://sessionbuddy.com/images/retina/default.png"><a href="https://vbernard9.github.io/profile/" target="_blank">Vincent's Profile Page</a></li>
          <li><img class="sb-favicon" src="http://sessionbuddy.com/images/retina/default.png"><a href="https://abelbrown.github.io/profile/" target="_blank">ABEL&nbsp;-&nbsp;le&nbsp;daredevil&nbsp;du&nbsp;code</a></li>
          <li><img class="sb-favicon" src="http://sessionbuddy.com/images/retina/default.png"><a href="https://adam-2-rosange.github.io/profile/" target="_blank">Adam&nbsp;Boespflug</a></li>
          <li><img class="sb-favicon" src="http://sessionbuddy.com/images/retina/default.png"><a href="https://apelegri.github.io/profile/" target="_blank">Basic&nbsp;info</a></li>
@@ -53,6 +53,7 @@
          <li><img class="sb-favicon" src="http://sessionbuddy.com/images/retina/default.png"><a href="https://vkorelsky.github.io/profile/" target="_blank">Rocket&nbsp;coder</a></li>
          <li><img class="sb-favicon" src="http://sessionbuddy.com/images/retina/default.png"><a href="https://victorleroy.github.io/profile/" target="_blank">Victor's&nbsp;profile</a></li>
          <li><img class="sb-favicon" src="http://sessionbuddy.com/images/retina/default.png"><a href="https://mcrosbeef.github.io/profile/" target="_blank">Vin¢ent</a></li>
+            <li><img class="sb-favicon" src="http://sessionbuddy.com/images/retina/default.png"><a href="https://vrehm.github.io/testing-front/profile/" target="_blank">Vincent Rhem</a></li>
       </ul>
    </body>
 </html>
