--- a/index.html
+++ b/index.html
@@ -2,58 +2,66 @@
 <html>
    <head>
       <meta charset="utf-8">
-      <style>
-         body { font-family:helvetica,arial,sans-serif; font-size:13px; }
-         h1 { color:hsl(0, 0%, 40%); background:#eee; margin:20px 10px 0; padding:10px; border-radius:2px; font-weight:normal; font-size:17px; }
-         h2 { color:hsl(0,0%,33%); margin-left:25px; margin-top:20px; font-weight:normal; font-size:15px; }
-         ul { list-style-type:none; }
-         li { white-space:nowrap; padding:3px 0; }
-         a { text-decoration:none; vertical-align:middle; color:black; }
-         a:hover { text-decoration:underline; }
-         .sb-favicon { height:16px; width:16px; margin-right:12px; vertical-align:middle; }
-      </style>
+      <title>Batch #30 profile pages</title>
+
+      <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Montserrat:400,700">
+      <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+      <link rel="stylesheet" href="style.css">
+
    </head>
    <body>
+    <div id="sidebar">
+      <i class="fa fa-search" aria-hidden="true"></i>
       <ul>
-         <li><img class="sb-favicon" src="http://sessionbuddy.com/images/retina/default.png"><a href="https://vbernard9.github.io/profile/" target="_blank">Vincent's Profile Page</a></li>
-         <li><img class="sb-favicon" src="http://sessionbuddy.com/images/retina/default.png"><a href="https://abelbrown.github.io/profile/" target="_blank">ABEL&nbsp;-&nbsp;le&nbsp;daredevil&nbsp;du&nbsp;code</a></li>
-         <li><img class="sb-favicon" src="http://sessionbuddy.com/images/retina/default.png"><a href="https://adam-2-rosange.github.io/profile/" target="_blank">Adam&nbsp;Boespflug</a></li>
-         <li><img class="sb-favicon" src="http://sessionbuddy.com/images/retina/default.png"><a href="https://apelegri.github.io/profile/" target="_blank">Basic&nbsp;info</a></li>
-         <li><img class="sb-favicon" src="http://sessionbuddy.com/images/retina/default.png"><a href="https://andreaca.github.io/profile/" target="_blank">Site&nbsp;not&nbsp;found&nbsp;·&nbsp;GitHub&nbsp;Pages</a></li>
-         <li><img class="sb-favicon" src="http://sessionbuddy.com/images/retina/default.png"><a href="https://amcdaid106.github.io/profile/" target="_blank">Aoife's&nbsp;Profile</a></li>
-         <li><img class="sb-favicon" src="http://sessionbuddy.com/images/retina/default.png"><a href="https://benjaminly.github.io/profile/" target="_blank">Benjamin&nbsp;Lyphoudt</a></li>
-         <li><img class="sb-favicon" src="http://sessionbuddy.com/images/retina/default.png"><a href="https://briceth.github.io/profile/" target="_blank">Brice&nbsp;Tessier&nbsp;Huort</a></li>
-         <li><img class="sb-favicon" src="http://sessionbuddy.com/images/retina/default.png"><a href="https://colinech.github.io/profile/" target="_blank">Coline's&nbsp;profile</a></li>
-         <li><img class="sb-favicon" src="http://sessionbuddy.com/images/retina/default.png"><a href="https://constancetoul.github.io/profile/" target="_blank">Constance's&nbsp;profile</a></li>
-         <li><img class="sb-favicon" src="http://sessionbuddy.com/images/retina/default.png"><a href="https://damienlethiec.github.io/profile/#summary" target="_blank">Profil&nbsp;-&nbsp;Damien&nbsp;Le&nbsp;Thiec</a></li>
-         <li><img class="sb-favicon" src="http://sessionbuddy.com/images/retina/default.png"><a href="https://domitillechenut.github.io/profile/" target="_blank">Domitille&nbsp;Chenut&nbsp;Profile</a></li>
-         <li><img class="sb-favicon" src="http://sessionbuddy.com/images/retina/default.png"><a href="https://emerichenon.github.io/profile/" target="_blank">Emeric&nbsp;Henon</a></li>
-         <li><img class="sb-favicon" src="http://sessionbuddy.com/images/retina/default.png"><a href="https://joyfaucon.github.io/profile/" target="_blank">Basic&nbsp;info</a></li>
-         <li><img class="sb-favicon" src="http://sessionbuddy.com/images/retina/default.png"><a href="https://abaris79.github.io/profile/" target="_blank">Florian&nbsp;COUSIN,&nbsp;de&nbsp;la&nbsp;Flute&nbsp;à&nbsp;la&nbsp;Startup</a></li>
-         <li><img class="sb-favicon" src="http://sessionbuddy.com/images/retina/default.png"><a href="https://fwibaux.github.io/profile/" target="_blank">CV&nbsp;of&nbsp;Frederic&nbsp;Wibaux</a></li>
-         <li><img class="sb-favicon" src="http://sessionbuddy.com/images/retina/default.png"><a href="https://gildasfremont.github.io/profile/#projects" target="_blank">Basic&nbsp;info</a></li>
-         <li><img class="sb-favicon" src="http://sessionbuddy.com/images/retina/default.png"><a href="http://www.corlay.fr/" target="_blank">The&nbsp;Chronicles&nbsp;of&nbsp;Boromir,&nbsp;Captain&nbsp;of&nbsp;Gondor,&nbsp;son&nbsp;of&nbsp;Denethor&nbsp;the&nbsp;Second,&nbsp;High&nbsp;Warden&nbsp;of&nbsp;the&nbsp;White&nbsp;Tower</a></li>
-         <li><img class="sb-favicon" src="http://sessionbuddy.com/images/retina/default.png"><a href="https://gglaine.github.io/profile/" target="_blank">Guillaume&nbsp;Lainé</a></li>
-         <li><img class="sb-favicon" src="http://sessionbuddy.com/images/retina/default.png"><a href="https://hedijabri.github.io/profile/" target="_blank">Hedi's&nbsp;profile</a></li>
-         <li><img class="sb-favicon" src="http://sessionbuddy.com/images/retina/default.png"><a href="https://hugovandernotte.github.io/profile/" target="_blank">Hugo&nbsp;Vandernotte&nbsp;Page</a></li>
-         <li><img class="sb-favicon" src="http://sessionbuddy.com/images/retina/default.png"><a href="https://jeanquetil.github.io/profile/" target="_blank">Jean&nbsp;Anquetil&nbsp;-&nbsp;Basic&nbsp;info</a></li>
-         <li><img class="sb-favicon" src="http://sessionbuddy.com/images/retina/default.png"><a href="https://jeandecolombel.github.io/profile/" target="_blank">Zidane's&nbsp;page</a></li>
-         <li><img class="sb-favicon" src="http://sessionbuddy.com/images/retina/default.png"><a href="https://joemarc.github.io/profile/" target="_blank">Joé&nbsp;Marc&nbsp;profile</a></li>
-         <li><img class="sb-favicon" src="http://sessionbuddy.com/images/retina/default.png"><a href="https://lucmonteil.github.io/profile/" target="_blank">My&nbsp;Profile</a></li>
-         <li><img class="sb-favicon" src="http://sessionbuddy.com/images/retina/default.png"><a href="https://lucas-geitner.github.io/profile/" target="_blank">Lucas&nbsp;Geitner</a></li>
-         <li><img class="sb-favicon" src="http://sessionbuddy.com/images/retina/default.png"><a href="https://fraisesdesbois.github.io/profile/" target="_blank">Basic&nbsp;info</a></li>
-         <li><img class="sb-favicon" src="http://sessionbuddy.com/images/retina/default.png"><a href="https://msmoumou.github.io/profile/" target="_blank">My&nbsp;Awesome&nbsp;Profile</a></li>
-         <li><img class="sb-favicon" src="http://sessionbuddy.com/images/retina/default.png"><a href="https://manoufeb.github.io/profile/#infos" target="_blank">Portfolio&nbsp;-&nbsp;Manou&nbsp;Febvret</a></li>
-         <li><img class="sb-favicon" src="http://sessionbuddy.com/images/retina/default.png"><a href="https://ofriedel.github.io/profile/" target="_blank">Oscar&nbsp;Friedel</a></li>
-         <li><img class="sb-favicon" src="http://sessionbuddy.com/images/retina/default.png"><a href="https://paulherrenschmidt.github.io/profile/" target="_blank">Site&nbsp;not&nbsp;found&nbsp;·&nbsp;GitHub&nbsp;Pages</a></li>
-         <li><img class="sb-favicon" src="http://sessionbuddy.com/images/retina/default.png"><a href="https://paulinepeco.github.io/profile/#salute-me" target="_blank">Java-nanas</a></li>
-         <li><img class="sb-favicon" src="http://sessionbuddy.com/images/retina/default.png"><a href="https://rachelbjj.github.io/profile/" target="_blank">DJ&nbsp;SOULE&nbsp;official</a></li>
-         <li><img class="sb-favicon" src="http://sessionbuddy.com/images/retina/default.png"><a href="https://romainmorlevat.github.io/profile/#top" target="_blank">À&nbsp;bord&nbsp;du&nbsp;Wagon</a></li>
-         <li><img class="sb-favicon" src="http://sessionbuddy.com/images/retina/default.png"><a href="https://tpedelhez.github.io/profile/" target="_blank">Thibault&nbsp;Pedelhez</a></li>
-         <li><img class="sb-favicon" src="http://sessionbuddy.com/images/retina/default.png"><a href="https://vkorelsky.github.io/profile/" target="_blank">Rocket&nbsp;coder</a></li>
-         <li><img class="sb-favicon" src="http://sessionbuddy.com/images/retina/default.png"><a href="https://victorleroy.github.io/profile/" target="_blank">Victor's&nbsp;profile</a></li>
-         <li><img class="sb-favicon" src="http://sessionbuddy.com/images/retina/default.png"><a href="https://mcrosbeef.github.io/profile/" target="_blank">Vin¢ent</a></li>
-            <li><img class="sb-favicon" src="http://sessionbuddy.com/images/retina/default.png"><a href="https://vrehm.github.io/testing-front/profile/" target="_blank">Vincent Rhem</a></li>
+        <li><a href="#a">A > G</a></li>
+        <li><a href="#h">H > N</a></li>
+        <li><a href="#o">O > Z</a></li>
       </ul>
+    </div>
+
+    <div class="wrapper">
+      <ul>
+      <li><img src="images/16543868.png" alt="Abel Mebkhout"><a href="https://Abelbrown.github.io/profile">Abel Mebkhout</a></li>
+      <li><img src="images/20278528.jpe" alt="adam Boespflug"><a href="https://Adam-2-Rosange.github.io/profile">adam Boespflug</a></li>
+      <li><img src="images/19859859.jpe" alt="adrien pelegri"><a href="https://apelegri.github.io/profile">adrien pelegri</a></li>
+      <li><img src="images/20269396.jpe" alt="Andrea Cavallo"><a href="https://AndreaCa1.github.io/profile">Andrea Cavallo</a></li>
+      <li><img src="images/13931214.jpe" alt="Aoife McDaid"><a href="https://amcdaid106.github.io/profile">Aoife McDaid</a></li>
+      <li><img src="images/20264822.jpe" alt="Benjamin Lyphoudt"><a href="https://BenjaminLY.github.io/profile">Benjamin Lyphoudt</a></li>
+      <li><img src="images/12598956.jpe" alt="Brice Tessier Huort"><a href="https://briceth.github.io/profile">Brice Tessier Huort</a></li>
+      <li><img src="images/19799186.jpe" alt="Coline Colnat"><a href="https://ColineCH.github.io/profile">Coline Colnat</a></li>
+      <li><img src="images/3493249.jpe" alt="Constance Toulemonde"><a href="https://ConstanceToul.github.io/profile">Constance Toulemonde</a></li>
+      <li><img src="images/8105430.jpe" alt="Damien Le Thiec"><a href="https://damienlethiec.github.io/profile">Damien Le Thiec</a></li>
+      <li><img src="images/19386373.jpe" alt="Domitille Chenut"><a href="https://Domitillechenut.github.io/profile">Domitille Chenut</a></li>
+      <li><img src="images/13255127.jpe" alt="Emeric Henon"><a href="https://Emerichenon.github.io/profile">Emeric Henon</a></li>
+      <li><img src="images/20092682.jpe" alt="FARAH FALCONI"><a href="https://joyfaucon.github.io/profile">FARAH FALCONI</a></li>
+      <li><img src="images/20256545.jpe" alt="Florian COUSIN"><a href="https://Abaris79.github.io/profile">Florian COUSIN</a></li>
+      <li><img src="images/20249594.jpe" alt="Fred Wibaux"><a href="https://fwibaux.github.io/profile">Fred Wibaux</a></li>
+      <li><img src="images/2920097.jpe" alt="Gildas Frémont"><a href="https://gildasfremont.github.io/profile">Gildas Frémont</a></li>
+      <li><img src="images/18237738.png" alt="Guillaume Corlay"><a href="https://Yalroc.github.io/profile">Guillaume Corlay</a></li>
+      <li><img src="images/11638637.jpe" alt="Guillaume Lainé"><a href="https://gglaine.github.io/profile">Guillaume Lainé</a></li>
+      <li><img src="images/17023337.jpe" alt="Hedi Jabri"><a href="https://HediJabri.github.io/profile">Hedi Jabri</a></li>
+      <li><img src="images/20269780.png" alt="Hugo Vandernotte"><a href="https://hugovandernotte.github.io/profile">Hugo Vandernotte</a></li>
+      <li><img src="images/19268036.jpe" alt="Jean Anquetil"><a href="https://Jeanquetil.github.io/profile">Jean Anquetil</a></li>
+      <li><img src="images/17654178.jpe" alt="Jean de Colombel"><a href="https://jeandecolombel.github.io/profile">Jean de Colombel</a></li>
+      <li><img src="images/16984937.jpe" alt="Joé Marc"><a href="https://Joemarc.github.io/profile">Joé Marc</a></li>
+      <li><img src="images/19283865.jpe" alt="Luc Monteil"><a href="https://lucmonteil.github.io/profile">Luc Monteil</a></li>
+      <li><img src="images/20271305.jpe" alt="Lucas geitner"><a href="https://Lucas-Geitner.github.io/profile">Lucas geitner</a></li>
+      <li><img src="images/19386753.jpe" alt="Mael Machane"><a href="https://Fraisesdesbois.github.io/profile">Mael Machane</a></li>
+      <li><img src="images/19784031.jpe" alt="Mael SINGH"><a href="https://MSMouMou.github.io/profile">Mael SINGH</a></li>
+      <li><img src="images/19815229.jpe" alt="Manou Febvret"><a href="https://manoufeb.github.io/profile">Manou Febvret</a></li>
+      <li><img src="images/17125931.jpe" alt="Oscar Friedel"><a href="https://OFriedel.github.io/profile">Oscar Friedel</a></li>
+      <li><img src="images/20271587.png" alt="Paul HERRENSCHMIDT"><a href="https://paulherrenschmidt.github.io/profile">Paul HERRENSCHMIDT</a></li>
+      <li><img src="images/20154446.jpe" alt="Pauline PECORINI"><a href="https://Paulinepeco.github.io/profile">Pauline PECORINI</a></li>
+      <li><img src="images/20318077.jpe" alt="Rachel BJORK"><a href="https://rachelbjj.github.io/profile">Rachel BJORK</a></li>
+      <li><img src="images/8529710.png" alt="Romain Boussot"><a href="https://rboussot.github.io/profile">Romain Boussot</a></li>
+      <li><img src="images/19805656.jpe" alt="Romain Morlevat"><a href="https://RomainMorlevat.github.io/profile">Romain Morlevat</a></li>
+      <li><img src="images/19786792.jpe" alt="Thibault Pedelhez"><a href="https://TPedelhez.github.io/profile">Thibault Pedelhez</a></li>
+      <li><img src="images/19265860.jpe" alt="Victor Korelsky"><a href="https://VKorelsky.github.io/profile">Victor Korelsky</a></li>
+      <li><img src="images/8269384.jpe" alt="Victor Leroy"><a href="https://victorleroy.github.io/profile">Victor Leroy</a></li>
+      <li><img src="images/17464141.jpe" alt="Vincent BERNARD"><a href="https://vbernard9.github.io/profile">Vincent BERNARD</a></li>
+      <li><img src="images/19992076.jpe" alt="Vincent Brès"><a href="https://McRosbeef.github.io/profile">Vincent Brès</a></li>
+      <li><img src="images/8135206.jpe" alt="Vincent REHM"><a href="https://vrehm.github.io/profile">Vincent REHM</a></li>
+      </ul>
+    </div>
    </body>
 </html>
